<resources>
    <string name="app_name">Twitter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="rose_user"> "@roseannepics"</string>

    <string name="gpt_user"> "@gptFAKE"</string>

    <string name="noti_content1">"In case you missed Adobe Pts’s Tweet"</string>

    <string name="noti_content2">"Creating meaningful experiences: an Introduction to User Experience design >




owww.ly/p0fx50y5CoO

#ux #uxdesign #uxresearch #userresearch #research #productdesing #webdesign #userexperience #startup #digital #design #diseno #psychology #servicedesign #conversion pic.twitter.com/wgpLcbkomN " </string>

    <string name="bookmark_head">Bookmark the post for watching later</string>

    <string name="bookmark_content">Bookmark posts snd make it easy to watch later</string>

    <string name="list_header">Discover new list</string>

    <string name="my_list">Your list</string>

    <string name="more_op">More</string>

    <string name="no_list">You have not created or followed any Lists. When you do that, those lists will appear here</string>

    <string name="premium_title">Premium</string>

    <string name="premium_user">@Hiep1612</string>

    <string name="premium_month">Month</string>

    <string name="premium_year">Year</string>
</resources>