<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PremiumActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_premium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/premiumTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premium_title"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premium_user"
                android:textSize="12sp"
                android:textColor="@color/black"/>

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <!-- Other views and content for your child activity -->

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_below="@+id/toolbar" />
    <RelativeLayout
        android:id="@+id/lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/rr"
            android:layout_marginEnd="16dp"
            android:layout_centerInParent="true">

            <!-- Add your content inside the rounded rectangle here -->

            <TextView
                android:id="@+id/text"
                android:layout_width="325dp"
                android:layout_height="98dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="0dp"
                android:text="feuwifusidnisjnsdncsnvusovnsnvcknlvvnlsknvfksnfnvsjlnvsljnfjvnsfjvnflsnvfjsnvfjslvnslfjnvslfjvnsfjvnlsfvnfjnvsljfnvsljnvlsjvnslfjnvjslvnnvsljvfl"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/tickIcon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_tick"/>
        </RelativeLayout>
    </RelativeLayout>

    <Space
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_below="@+id/text" />

    <!-- Options Layout -->
    <LinearLayout
        android:id="@+id/optionsLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/space1"
        android:layout_centerInParent="true"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:orientation="horizontal"
        android:background="@color/black">

        <!-- Option 1 -->
        <TextView
            android:id="@+id/monthly"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/premium_month"
            android:textSize="16sp"
            android:background="@drawable/option_selector" />

        <!-- Option 2 -->
        <TextView
            android:id="@+id/yearly"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/premium_year"
            android:textSize="16sp"
            android:background="@drawable/option_selector"/>
    </LinearLayout>

    <Space
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_below="@+id/toolbar" />
    <RelativeLayout
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/rr"
            android:layout_marginEnd="16dp"
            android:layout_centerInParent="true">

            <!-- Add your content inside the rounded rectangle here -->

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:text="fnjenfuiwvbiurbvusbiuvbfvusbiruvbusvbsvjnvsjnfjbvuibvsfbvjsbrjvbsibvrubvjfbsjfbivabrriabfbjvajfiabjfiebrvjfajdfbviebjbiebfijvfbiarjbiejbvjbfjiadfbjibejrbvjfbvjafibijbriebijvbfjdbiabriabirjbiebfjivbfjiabrvierjbvijabrjbeibviebrivbei"
                android:textColor="@color/black" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>